# NVFlare

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  404.html  =1.0.0rc1  AGENTS.md  CITATION.cff  CLAUDE.md  CLAUDE_BENCHMARK_AUTH.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  build_doc.sh  build_docker.sh  check_list.txt  codecov.yml  conftest.py  index.html  my_project.yml  project_docker_test.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-extra.txt  requirements-min.txt  requirements.txt  rootCA.key  rootCA.pem  runtest.sh  server.key  setup.cfg  setup.py  skills.md  todo_list.txt  (+1 more)
docs/hello-world-docs/hello-flower/flwr-pt-tb/: pyproject.toml
examples/advanced/distributed_optimization/: .gitignore  README.md  pyproject.toml  requirements.txt
examples/advanced/distributed_optimization/1-consensus/: README.md  launcher.py  tutorial.ipynb
examples/advanced/distributed_optimization/2-two_moons/: README.md  config.py  launcher_dgd.py  launcher_gt.py  launcher_gtadam.py  utils.py
examples/advanced/distributed_optimization/3-mnist/: README.md  config.py  launcher_dgd.py  launcher_gt.py  launcher_gtadam.py  utils.py
examples/advanced/distributed_optimization/examples/1-consensus/: README.md  consensus_notebook.ipynb  launcher.py
examples/advanced/distributed_optimization/examples/2-two_moons/: config.py  launcher_dgd.py  launcher_gt.py  launcher_gtadam.py  utils.py
examples/advanced/distributed_optimization/examples/3-mnist/: config.py  launcher_dgd.py  launcher_gt.py  launcher_gtadam.py  utils.py
examples/advanced/distributed_optimization/nvdo/controllers/: __init__.py  base.py
examples/advanced/distributed_optimization/nvdo/executors/: __init__.py  base.py  consensus.py  distributed_gradient_descent.py  gradient_tracking.py  gtadam.py
examples/advanced/distributed_optimization/nvdo/types/: __init__.py
examples/advanced/distributed_optimization/nvdo/utils/: config_generator.py  metrics.py  topology.py
examples/hello-world/hello-flower/flwr-pt-tb/: pyproject.toml
examples/hello-world/hello-flower/flwr-pt-tb/flwr_pt_tb/: client.py  server.py
integration/xgboost/encryption_plugins/: CMakeLists.txt  README.md
integration/xgboost/encryption_plugins/cuda_plugin/: CMakeLists.txt  Findgmp.cmake  README.md  test.py
integration/xgboost/encryption_plugins/cuda_plugin/CGBN/: Makefile  README.md
integration/xgboost/encryption_plugins/cuda_plugin/src/: cuda_plugin.h  cuda_utils.h  delegated_plugin.cc  endec.h  old_cuda_plugin.h  paillier.h
integration/xgboost/encryption_plugins/nvflare_plugin/: CMakeLists.txt  README.md
integration/xgboost/encryption_plugins/nvflare_plugin/src/: delegated_plugin.cc  pass_thru_plugin.cc  pass_thru_plugin.h
integration/xgboost/encryption_plugins/nvflare_plugin/tests/: test_tenseal.py
integration/xgboost/encryption_plugins/shared/dam/: README.md
integration/xgboost/encryption_plugins/shared/include/: base_plugin.h  dam.h  data_set_ids.h  delegated_plugin.h  local_plugin.h  timer.h  util.h
integration/xgboost/encryption_plugins/shared/plugins/: local_plugin.cc  plugin_main.cc  util.cc
integration/xgboost/encryption_plugins/src/dam/: dam.cc
integration/xgboost/encryption_plugins/src/include/: base_plugin.h  dam.h  delegated_plugin.h  local_plugin.h  nvflare_plugin.h  pass_thru_plugin.h  util.h  xgboost_plugin.h
integration/xgboost/encryption_plugins/src/plugins/: local_plugin.cc  nvflare_plugin.cc  pass_thru_plugin.cc  xgboost_plugin.cc
integration/xgboost/encryption_plugins/tests/: CMakeLists.txt  test_main.cc  test_tenseal.py
integration/xgboost/processor/: CMakeLists.txt  README.md
integration/xgboost/processor/src/: README.md
integration/xgboost/processor/src/dam/: README.md  dam.cc
integration/xgboost/processor/src/include/: dam.h  data_set_ids.h  delegated_plugin.h  ipcl_processor.h  local_mock.h  local_processor.h  nvflare_processor.h  util.h  (+3 more)
integration/xgboost/processor/tests/: CMakeLists.txt  test_dam.cc  test_tenseal.py
research/fsi-fraud-detection/: README.md  index.html  main.py  pyproject.toml  run_central_train.sh  uv.lock.txt
research/fsi-fraud-detection/config/: siteA.yml  siteB.yml  siteC.yml  siteD.yml  siteE.yml
research/fsi-fraud-detection/data_generation/: __init__.py  attributes.py  dataset.py
research/fsi-fraud-detection/data_generation/anomaly_transformers/: __init__.py  type1.py  type2.py  type3.py  type4.py
research/fsi-fraud-detection/data_generation/attribute_data_provider/: __init__.py
research/fsi-fraud-detection/data_generation/commons/: typedefs.py
research/fsi-fraud-detection/data_generation/dataset_attribute/: __init__.py
research/fsi-fraud-detection/data_generation/rng/: gamma_distribution.py  lognormal_distribution.py  normal_distribution.py  random_choice.py  rng_base.py  typedefs.py  uniform_distribution.py
research/fsi-fraud-detection/data_generation/static_data/: country_static_data.py  field_static_data.py
research/fsi-fraud-detection/data_generation/synthetic_data_provider/: __init__.py  faker_synthetic_data_provider.py  faker_synthetic_data_provider_helper_functions.py  rng_data_provider.py  synthetic_data_provider.py
research/fsi-fraud-detection/docs/: anomaly-injection.md  configuration.md  data-generation.md  development.md  exploration-notebook.md  pipeline.md  rng.md
research/fsi-fraud-detection/misc/: data.py  data_io.py  experiments.py
research/fsi-fraud-detection/notebooks/: compute_fed_stats.ipynb  data_generation_exploration.ipynb  train_pytorch_model.ipynb
research/fsi-fraud-detection/stats/: client.py
research/fsi-fraud-detection/tests/: test_dataset.py
research/fsi-fraud-detection/tests/anomaly_transformers/: test_anomaly_types.py  test_injection_framework.py
research/fsi-fraud-detection/tests/rng/: test_rng.py
research/fsi-fraud-detection/tests/static_data/: test_country_static_data.py  test_field_static_data.py
research/fsi-fraud-detection/train/: central_train.py  client.py  model.py  utils.py
(+11908 files in other folders)
