[metadata]
url = https://github.com/NVIDIA/NVFlare
description = Federated Learning Application Runtime Environment
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license_files =
    LICENSE
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
zip_safe = True
python_requires = >= 3.8
install_requires =
    cryptography>=36.0.0
    Flask==2.1.2
    Flask-JWT-Extended==4.4.3
    Flask-SQLAlchemy==2.5.1
    SQLAlchemy==1.4.31
    grpcio==1.51.1
    gunicorn>=20.1.0
    numpy
    protobuf==3.20.3
    psutil>=5.9.1
    PyYAML>=6.0
    requests>=2.28.0
    six>=1.15.0
    msgpack>=1.0.3
    docker>=6.0
    websockets>=10.4
    pyhocon

[options.extras_require]
HE =
    tenseal==0.3.12
PSI =
    openmined.psi==1.1.1
PT =
    torch
    torchvision
SKLEARN =
    scikit-learn
TRACKING =
    tensorboard
app_opt =
    %(HE)s
    %(PSI)s
    %(PT)s
    %(SKLEARN)s
    %(TRACKING)s
doc =
    sphinx>=4.1.1
    sphinx_rtd_theme
    recommonmark
    sphinx-copybutton
    sphinxcontrib-jquery
test =
    %(app_opt)s
    isort==5.10.1
    flake8==5.0.4
    black==22.10.0
    click==8.1.3
    pytest-xdist==3.0.2
    pytest-cov==4.0.0
    pandas>=1.5.1
dev =
    %(doc)s
    %(test)s
all =
    %(app_opt)s

[options.entry_points]
console_scripts =
    nvflare=nvflare.cli:main

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E722,E741,F821,F841,F999,W503,W504,C408,E302,W291,E303,
    # N812 lowercase 'torch.nn.functional' imported as non lowercase 'F'
    N812
per_file_ignores = __init__.py: F401
exclude = *.pyi,.git,.eggs,nvflare/_version.py,versioneer.py,venv,.venv,_version.py,*grpc.py,*_pb2.py

[pydocstyle]
convention = google
add_ignore = D100,D101,D102,D103,D104,D105,D106
# match-dir=([^\.].*)|(.*(?!protos).*)
match-dir=((?!protos).)*

[versioneer]
VCS = git
style = pep440
versionfile_source = nvflare/_version.py
versionfile_build = nvflare/_version.py
tag_prefix =
