[metadata]
url = https://github.com/NVIDIA/NVFlare
description = Federated Learning Application Runtime Environment
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license_files =
    LICENSE
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
zip_safe = True
python_requires = >= 3.8
install_requires =
    cryptography>=36.0.0
    Flask==3.0.2
    Werkzeug==3.0.3
    Flask-JWT-Extended==4.6.0
    Flask-SQLAlchemy==3.1.1
    SQLAlchemy==2.0.16
    grpcio>=1.62.1
    gunicorn>=22.0.0
    numpy
    protobuf>=4.24.4
    psutil>=5.9.1
    PyYAML>=6.0
    requests>=2.28.0
    six>=1.15.0
    msgpack>=1.0.3
    docker>=6.0
    websockets>=10.4
    pyhocon

[options.extras_require]
HE =
    tenseal==0.3.15
PSI =
    openmined.psi==2.0.5
PT =
    torch
    torchvision
SKLEARN =
    scikit-learn
    pandas>=1.5.1
TRACKING =
    mlflow
    wandb
    tensorboard
MONITORING =
    datadog
CONFIG =
    omegaconf
app_opt =
    %(HE)s
    %(PSI)s
    %(PT)s
    %(SKLEARN)s
    %(TRACKING)s
    %(MONITORING)s
    pytorch_lightning
    xgboost
    bitsandbytes
app_opt_mac =
    %(PT)s
    %(SKLEARN)s
    %(TRACKING)s
core_opt =
    %(CONFIG)s
doc =
    sphinx>=4.1.1
    sphinx_rtd_theme
    recommonmark
    sphinx-copybutton
    sphinxcontrib-jquery
all =
    %(core_opt)s
    %(app_opt)s
all_mac =
    %(core_opt)s
    %(app_opt_mac)s
test_support =
    isort==5.13.2
    flake8==7.1.1
    black==24.8.0
    click==8.1.7
    pytest-xdist==3.6.1
    pytest-cov==5.0.0
    pandas>=1.5.1

test =
    %(all)s
    %(test_support)s

test_mac =
    %(all_mac)s
    %(test_support)s

dev =
    %(doc)s
    %(test)s
dev_mac =
    %(doc)s
    %(test_mac)s

[options.entry_points]
console_scripts =
    nvflare=nvflare.cli:main

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
# E501 is not flexible enough, we're using B950 instead
# N812 lowercase 'torch.nn.functional' imported as non lowercase 'F'
ignore =
    E203,
    E302,
    E303,
    E305,
    E402,
    E501,
    E701,
    E721,
    E722,
    E741,
    F821,
    F841,
    F999,
    N812,
    W291,
    W503,
    W504
per_file_ignores = __init__.py: F401
exclude = *.pyi,.git,.eggs,nvflare/_version.py,versioneer.py,venv,.venv,_version.py,*grpc.py,*_pb2.py

[pydocstyle]
convention = google
add_ignore = D100,D101,D102,D103,D104,D105,D106
# match-dir=([^\.].*)|(.*(?!protos).*)
match-dir=((?!protos).)*

[versioneer]
VCS = git
style = pep440
versionfile_source = nvflare/_version.py
versionfile_build = nvflare/_version.py
tag_prefix =
