[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nvdo"]

[project]
name = "nvdo"
version = "0.0.1"
description = "Distributed optimization with NVFlare"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nvflare==2.5.2",
    "omegaconf==2.3.0",
    "rich==13.9.4",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "matplotlib==3.10.0",
    "scipy==1.15.0",
    "scikit-learn==1.6.1",
]

