[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tested with:
#   flwr==1.16.0
#   nvflare==2.6.0
#   torch==2.7.0
#   torchvision==0.22.0
#   tensorboard==2.19.0

[project]
name = "flwr_pt_tb"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr>=1.16,<2.0",
    "nvflare~=2.6.0rc",
    "torch",
    "torchvision",
    "tensorboard"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nvidia"

[tool.flwr.app.components]
serverapp = "flwr_pt_tb.server:app"
clientapp = "flwr_pt_tb.client:app"

[tool.flwr.app.config]
num-server-rounds = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
address = "127.0.0.1:9093"
insecure = true
